[gd_scene load_steps=2 format=3 uid="uid://jaw1i0vhv57h"]

[ext_resource type="Script" path="res://scenes/menus/level_end_menu/level_end_menu.gd" id="1_1582o"]

[node name="LevelEndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1582o")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelFinishedLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "LEVEL FINISHED !"

[node name="TimeLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "00:00:00"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -106.0
offset_right = 272.0
offset_bottom = -42.0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -106.0
offset_right = -50.0
offset_bottom = -42.0
theme_override_font_sizes/font_size = 40
text = "Next
"
